Fix spacing

--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -24,6 +24,12 @@ h2 {
   }
 }
 
+.post-content {
+  h2 {
+    margin-bottom: 2rem;
+  }
+}
+
 h3 {
   color: $mauve-500;
   font-size: 24px;
@@ -68,6 +74,16 @@ p {
       font-size: 12px;
       line-height: 16px;
     }
+  }
+}
+
+.post-content {
+  p {
+    margin-bottom: 2rem;
+  }
+
+  p + h2 {
+    margin-bottom: 2rem;
   }
 }
 
